# gofoto-svn

trunk/: INSTALL  Makefile.in  README  configure.in  gofoto.1  gofoto.sh.in  manpage.1.ex  menu.ex
trunk/debian/: changelog  control  copyright  dirs  files  gofoto.postinst.debhelper  gofoto.prerm.debhelper  rules
trunk/plugins/PhotoRefining/: Makefile.in  PhotoRefining.py  gui.glade
trunk/plugins/VideoCD/: Makefile.in  VideoCD.py  gui.glade
trunk/plugins/WebGallery/: Makefile.in  WebGallery.py  gui.glade
trunk/plugins/WebGallery/templates/simple/: chapter.html  layout.html  photo.html
trunk/src/: Makefile.in  const.py.in.in  gofoto.glade  gofoto.py  plugins.py  properties.py  thumbcache.py
