dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/gofoto.py)

PACKAGE=gofoto
VERSION=0.1.0

AC_PATH_PROG(PYTHON, python)

AC_SUBST(PYTHON)
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AC_PROG_INSTALL
AC_PROG_MAKE_SET

AC_OUTPUT(Makefile src/Makefile	src/const.py.in \
          plugins/PhotoRefining/Makefile \
          plugins/WebGallery/Makefile \
          plugins/VideoCD/Makefile \
	  gofoto.sh)
